# cura-data

./: .env_example  .gitignore  .gitmodules  1_basic.py  2_advanced.py  2_advanced_w_instructor.py  3_claire_demo.py  README.md  advanced_w_instructor.py  gradio_demo.py  pyproject.toml  save_enrich_table.py
demo_data/tabular/: toy_transactions.csv  toy_transactions_corrupted.csv
demo_data/zauber/: Container_Sample_per_Prefix.csv
