[project]
name = "cura-data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "diskcache",
    "instructor",
    "langchain>=1.0.0a4",
    "langchain-core>=1.0.0a4",
    "langchain-openai",
    "litellm",
    "loguru",
    "markdown",
    "markdownify",
    "openai",
    "python-dotenv",
    "rich",
    "trafilatura",
]
