[project]
name = "cura-data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "diskcache",
    "instructor",
    "langchain>=1.0.0a4",
    "langchain-core>=1.0.0a4",
    "langchain-openai",
    "litellm",
    "loguru",
    "markdown",
    "markdownify",
    "gradio",
    "openai",
    "python-dotenv",
    "rich",
    "trafilatura",
    "weaviate-client[agents]>=4.17.0",
    "datasets>=4.2.0",
]
